adding smooch.io

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -15,3 +15,12 @@
 <p><br><br><br><br><br><br></p>
 
 <!-- Footer End -->
+<script>
+Smooch.init({ 
+	appToken: '7927tml79bun94sd93lxt4i7f' ,
+	customText: {
+        headerText: 'Hi There! What\'s up?',
+        introText: 'Let\'s chat',
+        }
+    });
+</script>
