--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -16,11 +16,11 @@
 
 <!-- Footer End -->
 <script>
-Smooch.init({ 
-	appToken: '7927tml79bun94sd93lxt4i7f' ,
-	customText: {
-        headerText: 'Hi There! What\'s up?',
-        introText: 'Let\'s chat',
-        }
-    });
+// Smooch.init({ 
+// 	appToken: '7927tml79bun94sd93lxt4i7f' ,
+// 	customText: {
+//         headerText: 'Hi There! What\'s up?',
+//         introText: 'Let\'s chat',
+//         }
+//     });
 </script>
