--- a/_includes/head.html
+++ b/_includes/head.html
@@ -26,7 +26,7 @@
   <link href="//fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic" rel="stylesheet" type="text/css">
   <link href="//fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
   <link rel="stylesheet" href="{{site.baseurl}}/css/rrssb.css" />
-  <script src="https://cdn.smooch.io/smooch.min.js"></script>
+  <!-- <script src="https://cdn.smooch.io/smooch.min.js"></script> -->
   <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
   <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
   <!--[if lt IE 9]>
