--- a/_includes/js.html
+++ b/_includes/js.html
@@ -143,15 +143,15 @@ $(window).scroll(toggleNavCollapse);$(function(){$("a.page-scroll").bind("click"
     shuffle(myQuotes)
   {% endif %}
 
-    $(".intro-text").typed({
-      strings: myQuotes,
-      typeSpeed: {{ site.type-speed }},
-      backDelay: {{ site.delete-delay }},
-      startDelay: {{ site.start-delay }},
-      loop: {{ site..loop }},
-      loopCount: {{ site.loop-count }},
-      cursorChar: "|"
-    });
+    // $(".intro-text").typed({
+    //   strings: myQuotes,
+    //   typeSpeed: {{ site.type-speed }},
+    //   backDelay: {{ site.delete-delay }},
+    //   startDelay: {{ site.start-delay }},
+    //   loop: {{ site..loop }},
+    //   loopCount: {{ site.loop-count }},
+    //   cursorChar: "|"
+    // });
   </script>
 
   <!-- Dynamic Typing End  -->
